--- a/BuildingBridges/Base.lproj/Main.storyboard
+++ b/BuildingBridges/Base.lproj/Main.storyboard
@@ -115,8 +115,8 @@
         <scene sceneID="gGB-qS-K6N">
             <objects>
                 <navigationController id="Dhu-bV-oJc" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="asv-5h-vdg">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="asv-5h-vdg">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
